--- a/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
@@ -6,6 +6,15 @@
 
 <h1>Student Roster</h1>
 
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["Message"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
